# Integration_service

./: .editorconfig  .gitignore  README.md
components/backend/: .env.example  pyproject.toml  pytest.ini
components/backend/integration_service/adapters/api/: app.py  settings.py
components/backend/integration_service/adapters/api/dependencies/: __init__.py  use_cases.py
components/backend/integration_service/adapters/api/routers/: __init__.py  task_processing.py
components/backend/integration_service/adapters/database/: __init__.py  mapping.py  settings.py  tables.py
components/backend/integration_service/adapters/email_standardization/: __init__.py
components/backend/integration_service/adapters/gpt_generation/: __init__.py
components/backend/integration_service/adapters/log/: config.py
components/backend/integration_service/adapters/message_bus/: __init__.py  constants.py  consumers.py  publisher.py  settings.py
components/backend/integration_service/adapters/phone_validation/: __init__.py
components/backend/integration_service/application/: entities.py
components/backend/integration_service/application/dtos/: __init__.py  base.py  task.py
components/backend/integration_service/application/errors/: __init__.py  base.py  publishing.py
components/backend/integration_service/application/interfaces/: __init__.py
components/backend/integration_service/application/use_cases/: __init__.py  task_processing.py
components/backend/integration_service/launchers/: alembic_runner.py  api.py  task_worker.py
deployment/backend/: Dockerfile  (+1 more)
(+37 files in other folders)
